{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 191,
  "lineage": "3daa62aa-b3de-38d7-285b-159d84580ffd",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "romlab-web-appgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [],
            "backend_address_pool": [
              {
                "fqdns": [],
                "id": "/subscriptions/ad80d0e4-e8e9-41c7-aedd-bb26a094c58a/resourceGroups/alb-demo-rg/providers/Microsoft.Network/applicationGateways/alb-demo-appgw/backendAddressPools/webvm-backend",
                "ip_addresses": [
                  "10.253.21.10",
                  "10.253.22.10"
                ],
                "name": "webvm-backend"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/ad80d0e4-e8e9-41c7-aedd-bb26a094c58a/resourceGroups/alb-demo-rg/providers/Microsoft.Network/applicationGateways/alb-demo-appgw/backendHttpSettingsCollection/alb-be-http",
                "name": "alb-be-http",
                "path": "",
                "pick_host_name_from_backend_address": false,
                "port": 80,
                "probe_id": "",
                "probe_name": "",
                "protocol": "Http",
                "request_timeout": 20,
                "trusted_root_certificate_names": []
              }
            ],
            "custom_error_configuration": [],
            "enable_http2": false,
            "fips_enabled": false,
            "firewall_policy_id": "",
            "force_firewall_policy_association": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/ad80d0e4-e8e9-41c7-aedd-bb26a094c58a/resourceGroups/alb-demo-rg/providers/Microsoft.Network/applicationGateways/alb-demo-appgw/frontendIPConfigurations/alb-frontend-pip",
                "name": "alb-frontend-pip",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "private_link_configuration_id": "",
                "private_link_configuration_name": "",
                "public_ip_address_id": "/subscriptions/ad80d0e4-e8e9-41c7-aedd-bb26a094c58a/resourceGroups/alb-demo-rg/providers/Microsoft.Network/publicIPAddresses/alb-demo-albpip",
                "subnet_id": ""
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/ad80d0e4-e8e9-41c7-aedd-bb26a094c58a/resourceGroups/alb-demo-rg/providers/Microsoft.Network/applicationGateways/alb-demo-appgw/frontendPorts/alb-frontendport",
                "name": "alb-frontendport",
                "port": 80
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/ad80d0e4-e8e9-41c7-aedd-bb26a094c58a/resourceGroups/alb-demo-rg/providers/Microsoft.Network/applicationGateways/alb-demo-appgw/gatewayIPConfigurations/alb-demo-appgw-privip",
                "name": "alb-demo-appgw-privip",
                "subnet_id": "/subscriptions/ad80d0e4-e8e9-41c7-aedd-bb26a094c58a/resourceGroups/alb-demo-rg/providers/Microsoft.Network/virtualNetworks/alb-demo-vnet/subnets/alb-demo-albpubnet"
              }
            ],
            "global": [],
            "http_listener": [
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/ad80d0e4-e8e9-41c7-aedd-bb26a094c58a/resourceGroups/alb-demo-rg/providers/Microsoft.Network/applicationGateways/alb-demo-appgw/frontendIPConfigurations/alb-frontend-pip",
                "frontend_ip_configuration_name": "alb-frontend-pip",
                "frontend_port_id": "/subscriptions/ad80d0e4-e8e9-41c7-aedd-bb26a094c58a/resourceGroups/alb-demo-rg/providers/Microsoft.Network/applicationGateways/alb-demo-appgw/frontendPorts/alb-frontendport",
                "frontend_port_name": "alb-frontendport",
                "host_name": "",
                "host_names": [],
                "id": "/subscriptions/ad80d0e4-e8e9-41c7-aedd-bb26a094c58a/resourceGroups/alb-demo-rg/providers/Microsoft.Network/applicationGateways/alb-demo-appgw/httpListeners/alb-httplisten",
                "name": "alb-httplisten",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": "",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              }
            ],
            "id": "/subscriptions/ad80d0e4-e8e9-41c7-aedd-bb26a094c58a/resourceGroups/alb-demo-rg/providers/Microsoft.Network/applicationGateways/alb-demo-appgw",
            "identity": [],
            "location": "eastus2",
            "name": "alb-demo-appgw",
            "private_endpoint_connection": [],
            "private_link_configuration": [],
            "probe": [],
            "redirect_configuration": [],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "/subscriptions/ad80d0e4-e8e9-41c7-aedd-bb26a094c58a/resourceGroups/alb-demo-rg/providers/Microsoft.Network/applicationGateways/alb-demo-appgw/backendAddressPools/webvm-backend",
                "backend_address_pool_name": "webvm-backend",
                "backend_http_settings_id": "/subscriptions/ad80d0e4-e8e9-41c7-aedd-bb26a094c58a/resourceGroups/alb-demo-rg/providers/Microsoft.Network/applicationGateways/alb-demo-appgw/backendHttpSettingsCollection/alb-be-http",
                "backend_http_settings_name": "alb-be-http",
                "http_listener_id": "/subscriptions/ad80d0e4-e8e9-41c7-aedd-bb26a094c58a/resourceGroups/alb-demo-rg/providers/Microsoft.Network/applicationGateways/alb-demo-appgw/httpListeners/alb-httplisten",
                "http_listener_name": "alb-httplisten",
                "id": "/subscriptions/ad80d0e4-e8e9-41c7-aedd-bb26a094c58a/resourceGroups/alb-demo-rg/providers/Microsoft.Network/applicationGateways/alb-demo-appgw/requestRoutingRules/alb-routerule",
                "name": "alb-routerule",
                "priority": 1,
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              }
            ],
            "resource_group_name": "alb-demo-rg",
            "rewrite_rule_set": [],
            "sku": [
              {
                "capacity": 2,
                "name": "Basic",
                "tier": "Basic"
              }
            ],
            "ssl_certificate": [],
            "ssl_policy": [
              {
                "cipher_suites": [],
                "disabled_protocols": [],
                "min_protocol_version": "",
                "policy_name": "AppGwSslPolicy20220101",
                "policy_type": "Predefined"
              }
            ],
            "ssl_profile": [],
            "tags": {
              "Project": "Azure LB VM Demo",
              "TimePeriod": "Nov2024"
            },
            "timeouts": null,
            "trusted_client_certificate": [],
            "trusted_root_certificate": [],
            "url_path_map": [],
            "waf_configuration": [],
            "zones": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_interface.romlab-web-vmnic",
            "azurerm_public_ip.romlab-alb-pip",
            "azurerm_resource_group.romlab-rg",
            "azurerm_subnet.romlab-alb-pubnet",
            "azurerm_subnet.romlab-vm-privnets",
            "azurerm_virtual_network.romlab-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "romlab-web-vmnic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/ad80d0e4-e8e9-41c7-aedd-bb26a094c58a/resourceGroups/alb-demo-rg/providers/Microsoft.Network/networkInterfaces/alb-webvm-01",
            "internal_domain_name_suffix": "uaqvxyilijju3dpybnfe2v45ld.cx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "alb-webvm-privip-01",
                "primary": true,
                "private_ip_address": "10.253.21.10",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/ad80d0e4-e8e9-41c7-aedd-bb26a094c58a/resourceGroups/alb-demo-rg/providers/Microsoft.Network/virtualNetworks/alb-demo-vnet/subnets/alb-demo-vmprivnet-1"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus2",
            "name": "alb-webvm-01",
            "private_ip_address": "10.253.21.10",
            "private_ip_addresses": [
              "10.253.21.10"
            ],
            "resource_group_name": "alb-demo-rg",
            "tags": {
              "Project": "Azure LB VM Demo",
              "TimePeriod": "Nov2024"
            }
          },
          "dependencies": [
            "azurerm_resource_group.romlab-rg",
            "azurerm_subnet.romlab-vm-privnets",
            "azurerm_virtual_network.romlab-vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/ad80d0e4-e8e9-41c7-aedd-bb26a094c58a/resourceGroups/alb-demo-rg/providers/Microsoft.Network/networkInterfaces/alb-webvm-02",
            "internal_domain_name_suffix": "uaqvxyilijju3dpybnfe2v45ld.cx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "alb-webvm-privip-02",
                "primary": true,
                "private_ip_address": "10.253.22.10",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/ad80d0e4-e8e9-41c7-aedd-bb26a094c58a/resourceGroups/alb-demo-rg/providers/Microsoft.Network/virtualNetworks/alb-demo-vnet/subnets/alb-demo-vmprivnet-2"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus2",
            "name": "alb-webvm-02",
            "private_ip_address": "10.253.22.10",
            "private_ip_addresses": [
              "10.253.22.10"
            ],
            "resource_group_name": "alb-demo-rg",
            "tags": {
              "Project": "Azure LB VM Demo",
              "TimePeriod": "Nov2024"
            }
          },
          "dependencies": [
            "azurerm_resource_group.romlab-rg",
            "azurerm_subnet.romlab-vm-privnets",
            "azurerm_virtual_network.romlab-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "romlab-privnetsg-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ad80d0e4-e8e9-41c7-aedd-bb26a094c58a/resourceGroups/alb-demo-rg/providers/Microsoft.Network/networkInterfaces/alb-webvm-01|/subscriptions/ad80d0e4-e8e9-41c7-aedd-bb26a094c58a/resourceGroups/alb-demo-rg/providers/Microsoft.Network/networkSecurityGroups/vm-privnet-sg",
            "network_interface_id": "/subscriptions/ad80d0e4-e8e9-41c7-aedd-bb26a094c58a/resourceGroups/alb-demo-rg/providers/Microsoft.Network/networkInterfaces/alb-webvm-01",
            "network_security_group_id": "/subscriptions/ad80d0e4-e8e9-41c7-aedd-bb26a094c58a/resourceGroups/alb-demo-rg/providers/Microsoft.Network/networkSecurityGroups/vm-privnet-sg"
          },
          "dependencies": [
            "azurerm_network_interface.romlab-web-vmnic",
            "azurerm_network_security_group.romlab-privnetsg",
            "azurerm_resource_group.romlab-rg",
            "azurerm_subnet.romlab-vm-privnets",
            "azurerm_virtual_network.romlab-vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ad80d0e4-e8e9-41c7-aedd-bb26a094c58a/resourceGroups/alb-demo-rg/providers/Microsoft.Network/networkInterfaces/alb-webvm-02|/subscriptions/ad80d0e4-e8e9-41c7-aedd-bb26a094c58a/resourceGroups/alb-demo-rg/providers/Microsoft.Network/networkSecurityGroups/vm-privnet-sg",
            "network_interface_id": "/subscriptions/ad80d0e4-e8e9-41c7-aedd-bb26a094c58a/resourceGroups/alb-demo-rg/providers/Microsoft.Network/networkInterfaces/alb-webvm-02",
            "network_security_group_id": "/subscriptions/ad80d0e4-e8e9-41c7-aedd-bb26a094c58a/resourceGroups/alb-demo-rg/providers/Microsoft.Network/networkSecurityGroups/vm-privnet-sg"
          },
          "dependencies": [
            "azurerm_network_interface.romlab-web-vmnic",
            "azurerm_network_security_group.romlab-privnetsg",
            "azurerm_resource_group.romlab-rg",
            "azurerm_subnet.romlab-vm-privnets",
            "azurerm_virtual_network.romlab-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "romlab-privnetsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ad80d0e4-e8e9-41c7-aedd-bb26a094c58a/resourceGroups/alb-demo-rg/providers/Microsoft.Network/networkSecurityGroups/vm-privnet-sg",
            "location": "eastus2",
            "name": "vm-privnet-sg",
            "resource_group_name": "alb-demo-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "To be able to remotely connect to VMs",
                "destination_address_prefix": "",
                "destination_address_prefixes": [
                  "10.253.21.0/24",
                  "10.253.22.0/24"
                ],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowRDP",
                "priority": 500,
                "protocol": "Tcp",
                "source_address_prefix": "71.183.150.118/32",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Project": "Azure LB VM Demo",
              "TimePeriod": "Nov2024"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.romlab-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "romlab_sgrule_allowwinrm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "",
            "destination_address_prefixes": [
              "10.253.21.0/24",
              "10.253.22.0/24"
            ],
            "destination_application_security_group_ids": null,
            "destination_port_range": "5986",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/ad80d0e4-e8e9-41c7-aedd-bb26a094c58a/resourceGroups/alb-demo-rg/providers/Microsoft.Network/networkSecurityGroups/vm-privnet-sg/securityRules/AllowWinRM",
            "name": "AllowWinRM",
            "network_security_group_name": "vm-privnet-sg",
            "priority": 200,
            "protocol": "Tcp",
            "resource_group_name": "alb-demo-rg",
            "source_address_prefix": "71.183.150.118/32",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.romlab-privnetsg",
            "azurerm_resource_group.romlab-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "romlab-alb-pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/ad80d0e4-e8e9-41c7-aedd-bb26a094c58a/resourceGroups/alb-demo-rg/providers/Microsoft.Network/publicIPAddresses/alb-demo-albpip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.1.162.4",
            "ip_version": "IPv4",
            "location": "eastus2",
            "name": "alb-demo-albpip",
            "resource_group_name": "alb-demo-rg",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "Project": "Azure LB VM Demo",
              "TimePeriod": "Nov2024"
            }
          },
          "dependencies": [
            "azurerm_resource_group.romlab-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "romlab-alb-pubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.253.10.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/ad80d0e4-e8e9-41c7-aedd-bb26a094c58a/resourceGroups/alb-demo-rg/providers/Microsoft.Network/virtualNetworks/alb-demo-vnet/subnets/alb-demo-albpubnet",
            "name": "alb-demo-albpubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "alb-demo-rg",
            "virtual_network_name": "alb-demo-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.romlab-rg",
            "azurerm_virtual_network.romlab-vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.253.10.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/ad80d0e4-e8e9-41c7-aedd-bb26a094c58a/resourceGroups/alb-demo-rg/providers/Microsoft.Network/virtualNetworks/alb-demo-vnet/subnets/alb-demo-albpubnet",
            "name": "alb-demo-albpubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "alb-demo-rg",
            "virtual_network_name": "alb-demo-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.romlab-rg",
            "azurerm_virtual_network.romlab-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "romlab-vm-privnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.253.21.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/ad80d0e4-e8e9-41c7-aedd-bb26a094c58a/resourceGroups/alb-demo-rg/providers/Microsoft.Network/virtualNetworks/alb-demo-vnet/subnets/alb-demo-vmprivnet-1",
            "name": "alb-demo-vmprivnet-1",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "alb-demo-rg",
            "virtual_network_name": "alb-demo-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.romlab-rg",
            "azurerm_virtual_network.romlab-vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.253.22.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/ad80d0e4-e8e9-41c7-aedd-bb26a094c58a/resourceGroups/alb-demo-rg/providers/Microsoft.Network/virtualNetworks/alb-demo-vnet/subnets/alb-demo-vmprivnet-2",
            "name": "alb-demo-vmprivnet-2",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "alb-demo-rg",
            "virtual_network_name": "alb-demo-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.romlab-rg",
            "azurerm_virtual_network.romlab-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "romlab-vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.253.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "e15b21a0-420b-4e53-8df8-0b4a4e57df5b",
            "id": "/subscriptions/ad80d0e4-e8e9-41c7-aedd-bb26a094c58a/resourceGroups/alb-demo-rg/providers/Microsoft.Network/virtualNetworks/alb-demo-vnet",
            "location": "eastus2",
            "name": "alb-demo-vnet",
            "resource_group_name": "alb-demo-rg",
            "tags": {
              "Project": "Azure LB VM Demo",
              "TimePeriod": "Nov2024"
            }
          },
          "dependencies": [
            "azurerm_resource_group.romlab-rg"
          ]
        }
      ]
    }
  ]
}